test-cases/valid/reject/use_variable_as_function.ul
void main() {
    int i;

    print i(); // Meant to write j, but instead we're using i as a function.
}

int j() {
    return 1;
}